# orogene

./: Cargo.toml  build.rs  tauri.conf.json
commands/cmd-ping/: Cargo.toml
commands/cmd-restore/: Cargo.toml
commands/cmd-shell/: Cargo.toml
commands/cmd-view/: Cargo.toml
crates/clap/: Cargo.toml
crates/clap/clap_derive/src/: attrs.rs
crates/clap/clap_derive/src/derives/: from_arg_matches.rs  into_app.rs
crates/oro-command/: Cargo.toml
src/: lib.rs  main-cli.rs  main-gui.rs
