[package]
name = "orogene"
version = "0.1.0"
authors = ["Orogene Collaborative Members", "Orogene Public Contributors"]
edition = "2018"
description = "wip"
license-file = "LICENSE.md"
repository = "https://github.com/orogene/orogene"
homepage = "https://github.com/orogene/orogene"
readme = "README.md"
build = "build.rs"

[workspace]
members = [".", "crates/*", "commands/*"]
default-members = [".", "crates/*", "commands/*"]

[dependencies]
# Commands
cmd-ping = { path = "./commands/cmd-ping" }
cmd-restore = { path = "./commands/cmd-restore" }
cmd-view = { path = "./commands/cmd-view" }
cmd-shell = { path = "./commands/cmd-shell" }

# Workspace Deps
oro-command = { path = "./crates/oro-command" }
oro-error-code = { path = "./crates/oro-error-code" }
oro-config = { path = "./crates/oro-config" }

# Regular deps
anyhow = "1.0.31"
async-std = { version = "1.6.2", features = ["attributes", "unstable"] }
async-trait = "0.1.36"
clap = { git = "https://github.com/zkat/clap" }
fern = "0.6.0"
log = "0.4.11"
smol = "0.1.18"
tauri = "0.9.2"
serde_json = "1.0.57"
serde = "1.0.115"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[build-dependencies]
embed-resource = "1.3.3"

[[bin]]
name = "oro"
path = "src/main-cli.rs"

[[bin]]
name = "oro-gui"
path = "src/main-gui.rs"
